# aiscdec

./: .gitmodules  CMakeLists.txt  README.md
include/: aiscdec.h
src/: aiscdec.cpp  run_tests.cpp
